--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,13 @@ build-backend = "hatchling.build"
 
 [project]
 name = "decayshape"
-version = "0.1.0"
+version = "0.1.1"
 description = "Lineshapes for hadron physics amplitude analysis"
 readme = "README.md"
 requires-python = ">=3.8"
 license = {file = "LICENSE"}
 authors = [
-    {name = "Your Name", email = "your.email@example.com"},
+    {name = "Kai Habermann", email = "kai.habermann@gmx.net"},
 ]
 classifiers = [
     "Development Status :: 3 - Alpha",
