--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -49,37 +49,53 @@ jobs:
           packages-dir: dist/
           verbose: true
 
-      # Uncomment the following step to publish to TestPyPI instead
-      - name: Publish to TestPyPI
-        if: false  # set to true to use TestPyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
+      # # Uncomment the following step to publish to TestPyPI instead
+      # - name: Publish to TestPyPI
+      #   if: false  # set to true to use TestPyPI
+      #   uses: pypa/gh-action-pypi-publish@release/v1
+      #   with:
+      #     packages-dir: dist/
+      #     repository-url: https://test.pypi.org/legacy/
+
+  github-release:
+    name: >-
+      Sign the Python 🐍 distribution 📦 with Sigstore
+      and upload them to GitHub Release
+    needs:
+      - build-and-publish
+    runs-on: ubuntu-latest
+
+    permissions:
+      contents: write # IMPORTANT: mandatory for making GitHub Releases
+      id-token: write # IMPORTANT: mandatory for sigstore
+
+    steps:
+      - name: Download all the dists
+        uses: actions/download-artifact@v3
         with:
-          packages-dir: dist/
-          repository-url: https://test.pypi.org/legacy/
-
-      - name: Generate SLSA provenance for build artifacts
-        uses: actions/attest-build-provenance@v1
+          name: python-package-distributions
+          path: dist/
+      - name: Sign the dists with Sigstore
+        uses: sigstore/gh-action-sigstore-python@v2.1.1
         with:
-          subject-path: "dist/*"
-
-      - name: Install cosign
-        uses: sigstore/cosign-installer@v3.7.0
-
-      - name: Sign distribution artifacts with Sigstore
-        env:
-          COSIGN_EXPERIMENTAL: "true"
-        run: |
-          set -e
-          for f in dist/*; do
-            cosign sign-blob --yes --output-signature "$f.sig" "$f"
-          done
-
+          inputs: >-
+            ./dist/*.tar.gz
+            ./dist/*.whl
       - name: Create GitHub Release
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: v${{ steps.get_version.outputs.version }}
-          name: v${{ steps.get_version.outputs.version }}
-          generate_release_notes: true
-          files: |
-            dist/*
-            dist/*.sig
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        run: >-
+          gh release create
+          '${{ github.ref_name }}'
+          --repo '${{ github.repository }}'
+          --notes ""
+      - name: Upload artifact signatures to GitHub Release
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        # Upload to GitHub Release using the `gh` CLI.
+        # `dist/` contains the built packages, and the
+        # sigstore-produced signatures and certificates.
+        run: >-
+          gh release upload
+          '${{ github.ref_name }}' dist/**
+          --repo '${{ github.repository }}'
